--- a/doan/mtaauto/templates/contact.html
+++ b/doan/mtaauto/templates/contact.html
@@ -1,4 +1,4 @@
-{% comment %}
+{% comment %} test
 <form action="{%url 'saveContact' %}" method="post">
   {% csrf_token %} {{cf.as_p}}
   <input type="submit" />
